--- a/apps/email_manager/scripts/v2.ipynb
+++ b/apps/email_manager/scripts/v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,6 +171,26 @@
     "                else:\n",
     "                    return None\n",
     "        return _retrieve_email_from_convo(self.head_email_node)\n",
+    "    \n",
+    "    def get_full_convo(self):\n",
+    "        first_email = self.head_email_node\n",
+    "        full_convo = []\n",
+    "        def _get_full_convo(current_email: EmailNode):\n",
+    "            email_data = current_email.email_data\n",
+    "            full_convo.append({\n",
+    "                \"from\": email_data.from_email,\n",
+    "                \"to\": email_data.to_emails,\n",
+    "                \"date\": email_data.date.strftime('%B %d, %Y, %-I:%M %p'),\n",
+    "                \"body\": email_data.body\n",
+    "            })\n",
+    "            next_email = current_email.next_node\n",
+    "            if next_email is not None:\n",
+    "                return _get_full_convo(next_email)\n",
+    "            else:\n",
+    "                return None\n",
+    "        _get_full_convo(first_email)\n",
+    "        return full_convo\n",
+    "\n",
     "            \n",
     "\n",
     "        \n"
@@ -178,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,20 +207,40 @@
     "    def __init__(self):\n",
     "        self.conversations = {}\n",
     "        self.latest_subjects = {}\n",
+    "        self.re_list = [\n",
+    "            \"RE: \",\n",
+    "            \"Re: \",\n",
+    "            \"re: \"\n",
+    "        ]\n",
+    "        self.fwd_list = [\n",
+    "            \"FW: \",\n",
+    "            \"fw: \",\n",
+    "            \"Fw: \",\n",
+    "            \"FWD: \",\n",
+    "            \"Fwd: \",\n",
+    "            \"fwd: \"\n",
+    "        ]\n",
     "\n",
     "    def extract_conversation(self):\n",
-    "        emails = EmailData.objects.order_by('date').all()[0:500]\n",
+    "        emails = EmailData.objects.order_by('date').all()[0:1500]\n",
     "        for an_email in emails:\n",
     "            if an_email.subject and an_email.date:\n",
     "                is_reply = False\n",
     "                is_fwdd = False\n",
     "                original_subject = an_email.subject.strip()\n",
-    "                if \"RE: \" in original_subject:\n",
+    "                \n",
+    "                if any(substring in original_subject for substring in self.re_list):\n",
     "                    is_reply = True\n",
-    "                if \"FW: \" in original_subject:\n",
+    "                if any(substring in original_subject for substring in self.fwd_list):\n",
     "                    is_fwdd = True\n",
-    "                rmvd_subject = original_subject.replace(\"RE: \", \"\")\n",
-    "                rmvd_subject = original_subject.replace(\"FW: \", \"\")\n",
+    "                rmvd_subject = original_subject\n",
+    "                for re_substring in self.re_list:\n",
+    "                    rmvd_subject = rmvd_subject.replace(re_substring, \"\")\n",
+    "                for fwd_substring in self.fwd_list:\n",
+    "                    rmvd_subject = rmvd_subject.replace(fwd_substring, \"\")\n",
+    "                rmvd_subject = rmvd_subject.replace(\"\\n\", \"\").replace(\"\\r\", \"\")\n",
+    "                # if 'RENEWAL | M/S HYGIENE CONTAINERS (PRIVATE) LIMITED | FIRE POLICIES' in rmvd_subject:\n",
+    "                #     print(original_subject)\n",
     "                if rmvd_subject in self.latest_subjects:\n",
     "                    if not is_reply and not is_fwdd:\n",
     "                        latest_date = an_email.date\n",
@@ -222,12 +262,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "convo_reader = ConversationReader()\n",
     "convo_reader.extract_conversation()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "May 23, 2023, 12:02 PM@RENEWAL | M/S HYGIENE CONTAINERS (PRIVATE) LIMITED | FIRE POLICIES\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'May 23, 2023, 12:02 PM@RENEWAL | M/S HYGIENE CONTAINERS (PRIVATE) LIMITED | FIRE POLICIES'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/Users/mirbilal/Desktop/minsir/apps/email_manager/scripts/v2.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mirbilal/Desktop/minsir/apps/email_manager/scripts/v2.ipynb#W5sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m key_str \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mMay 23, 2023, 12:02 PM@\u001b[39m\u001b[39m{\u001b[39;00msubj\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mirbilal/Desktop/minsir/apps/email_manager/scripts/v2.ipynb#W5sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mprint\u001b[39m(key_str)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/mirbilal/Desktop/minsir/apps/email_manager/scripts/v2.ipynb#W5sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m a_convo: EmailConvo \u001b[39m=\u001b[39m convo_reader\u001b[39m.\u001b[39;49mconversations[key_str]\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'May 23, 2023, 12:02 PM@RENEWAL | M/S HYGIENE CONTAINERS (PRIVATE) LIMITED | FIRE POLICIES'"
+     ]
+    }
+   ],
+   "source": [
+    "# keys_list = convo_reader.latest_subjects.keys()\n",
+    "# for a_key in keys_list:\n",
+    "#     if \"RENEWAL | M/S HYGIENE CONTAINERS\" in a_key:\n",
+    "#         print(a_key)\n",
+    "#         print(\"-\")\n",
+    "#         \"RE: \"\n",
+    "# print(convo_reader.latest_subjects[\"RENEWAL | M/S HYGIENE CONTAINERS (PRIVATE) LIMITED | FIRE POLICIES\"])\n",
+    "subj = 'RENEWAL | M/S HYGIENE CONTAINERS (PRIVATE) LIMITED | FIRE POLICIES'\n",
+    "my_date = formatted_date = convo_reader.latest_subjects[subj].strftime('%B %d, %Y, %-I:%M %p')\n",
+    "key_str = f\"May 23, 2023, 12:02 PM@{subj}\"\n",
+    "print(key_str)\n",
+    "a_convo: EmailConvo = convo_reader.conversations[key_str]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'from': 'Sales Adeel <Sales.Adeel@adamjeeinsurance.com>', 'to': ['Muhammad Feroze Vakil <Feroze.Vakil@adamjeeinsurance.com>'], 'date': 'May 08, 2023, 9:18 AM', 'body': 'Dear Feroze bhai,\\n\\xa0\\nKindly issue cover notes.\\n\\xa0\\n'}\n",
+      "\n",
+      "{'from': 'Abdul Rashid <Abdul.Rashid@adamjeeinsurance.com>', 'to': ['Shahzad Khan <shahzad@almuqeettextiles.com>, Mir Babar Ali\\r\\n\\t<Mir.babarali@adamjeeinsurance.com>'], 'date': 'May 08, 2023, 9:22 AM', 'body': 'Please attached invoice ?\\n\\xa0\\n'}\n",
+      "\n",
+      "{'from': 'Sales Adeel <Sales.Adeel@adamjeeinsurance.com>', 'to': ['Abdul Rashid <Abdul.Rashid@adamjeeinsurance.com>, Shahzad Khan\\r\\n\\t<shahzad@almuqeettextiles.com>, Mir Babar Ali\\r\\n\\t<Mir.babarali@adamjeeinsurance.com>'], 'date': 'May 08, 2023, 9:24 AM', 'body': 'Dear Rashid bhai,\\n\\xa0\\nFYI.\\n\\xa0\\n'}\n",
+      "\n",
+      "{'from': '\"Shahzad Khan\" <shahzad@almuqeettextiles.com>', 'to': ['\"\\'Mir Babar Ali\\'\" <Mir.babarali@adamjeeinsurance.com>'], 'date': 'May 08, 2023, 11:01 AM', 'body': 'Dear Mir Babar,\\n\\xa0\\nPlease make a cover and insurance as per attached file. Other detail we will share you after sailing of vessel.\\n\\xa0\\n\\xa0\\nBest Regards,\\nShahzad Khan \\n|\\n\\xa0\\nAL-MUQEET TEXTILES (PVT.) LTD.\\nT\\n \\n+92 21 3563 8362-5\\n \\n|\\xa0\\nF\\n \\n+92 21 3563 8366\\n \\n|\\n \\nC\\n \\n+92 323 3570114 \\nA\\n \\nM6, Mezzanine Floor, Beaumont Plaza, CL-10 ,Beaumont Road, Karachi - 75530 Pakistan.\\nE\\n \\nshahzad@almuqeettextiles.com\\n|\\n \\nW\\n \\nwww.almuqeettextiles.com'}\n",
+      "\n",
+      "{'from': 'Abdul Rashid <Abdul.Rashid@adamjeeinsurance.com>', 'to': ['Sales Adeel <Sales.Adeel@adamjeeinsurance.com>, Shahzad Khan\\r\\n\\t<shahzad@almuqeettextiles.com>, Mir Babar Ali\\r\\n\\t<Mir.babarali@adamjeeinsurance.com>'], 'date': 'May 10, 2023, 10:45 AM', 'body': 'Attached drafts PR-429 & 430 please check and required B/L\\n\\xa0\\n'}\n",
+      "\n",
+      "{'from': 'Abdul Rashid <Abdul.Rashid@adamjeeinsurance.com>', 'to': ['Shahzad Khan <shahzad@almuqeettextiles.com>, Mir Babar Ali\\r\\n\\t<Mir.babarali@adamjeeinsurance.com>'], 'date': 'May 11, 2023, 5:14 AM', 'body': 'Attached draft PR-431 please check & required B/L\\n\\xa0\\n'}\n",
+      "\n",
+      "{'from': '\"Shahzad Khan\" <shahzad@almuqeettextiles.com>', 'to': ['\"\\'Mir Babar Ali\\'\" <Mir.babarali@adamjeeinsurance.com>'], 'date': 'May 17, 2023, 12:27 PM', 'body': 'Dear Mir Babar,\\n\\xa0\\nPlease make a cover and insurance as per attached file. Other detail we will share you after sailing of vessel.\\n\\xa0\\n\\xa0\\nBest Regards,\\nShahzad Khan \\n|\\n\\xa0\\nAL-MUQEET TEXTILES (PVT.) LTD.\\nT\\n \\n+92 21 3563 8362-5\\n \\n|\\xa0\\nF\\n \\n+92 21 3563 8366\\n \\n|\\n \\nC\\n \\n+92 323 3570114 \\nA\\n \\nM6, Mezzanine Floor, Beaumont Plaza, CL-10 ,Beaumont Road, Karachi - 75530 Pakistan.\\nE\\n \\nshahzad@almuqeettextiles.com\\n|\\n \\nW\\n \\nwww.almuqeettextiles.com'}\n",
+      "{'from': '\"Shahzad Khan\" <shahzad@almuqeettextiles.com>', 'to': ['\"\\'Mir Babar Ali\\'\" <Mir.babarali@adamjeeinsurance.com>'], 'date': 'May 23, 2023, 3:12 PM', 'body': 'Dear Mir Babar,\\n\\xa0\\nPlease make a cover and insurance as per attached file. Other detail we will share you after sailing of vessel.\\n\\xa0\\n\\xa0\\n\\xa0\\n\\xa0\\nBest Regards,\\nShahzad Khan \\n|\\n\\xa0\\nAL-MUQEET TEXTILES (PVT.) LTD.\\nT\\n \\n+92 21 3563 8362-5\\n \\n|\\xa0\\nF\\n \\n+92 21 3563 8366\\n \\n|\\n \\nC\\n \\n+92 323 3570114 \\nA\\n \\nM6, Mezzanine Floor, Beaumont Plaza, CL-10 ,Beaumont Road, Karachi - 75530 Pakistan.\\nE\\n \\nshahzad@almuqeettextiles.com\\n|\\n \\nW\\n \\nwww.almuqeettextiles.com'}\n",
+      "\n",
+      "{'from': 'Sales Adeel <Sales.Adeel@adamjeeinsurance.com>', 'to': ['Mir Babar Ali <Mir.babarali@adamjeeinsurance.com>, Muhammad Feroze Vakil\\r\\n\\t<Feroze.Vakil@adamjeeinsurance.com>'], 'date': 'May 18, 2023, 6:49 AM', 'body': 'Dear Feroze bhai,\\n\\xa0\\nKindly update.\\n\\xa0\\n'}\n",
+      "\n",
+      "{'from': 'Waseem Shahzad <Waseem.Shahzad@adamjeeinsurance.com>', 'to': ['\"shahzad@almuqeettextiles.com\" <shahzad@almuqeettextiles.com>'], 'date': 'May 18, 2023, 9:21 AM', 'body': 'Dear Mr. Shahzad\\n\\xa0\\nPlease check attachment Initial draft of Marine Export Policy and share complete detail as soon as possible\\n\\xa0\\nBest Regards\\n\\xa0\\nWaseem Shahzad\\n\\xa0\\n'}\n",
+      "{'from': 'Waseem Shahzad <Waseem.Shahzad@adamjeeinsurance.com>', 'to': ['\"shahzad@almuqeettextiles.com\" <shahzad@almuqeettextiles.com>'], 'date': 'May 23, 2023, 12:25 PM', 'body': 'Dear Mr. Shahzad\\n\\xa0\\nPlease check attachment Initial draft of Marine Export Policy and send detail as soon as possible\\n\\xa0\\nWaseem Shahzad\\n\\xa0\\n'}\n",
+      "\n",
+      "{'from': 'Waseem Shahzad <Waseem.Shahzad@adamjeeinsurance.com>', 'to': ['\"shahzad@almuqeettextiles.com\" <shahzad@almuqeettextiles.com>'], 'date': 'May 23, 2023, 11:00 AM', 'body': 'Dear Mr. Shahzad\\n\\xa0\\nPlease check & confirm attachment final draft of Marine Export Policy\\n\\xa0\\nWaseem Shahzad\\n\\xa0\\n'}\n",
+      "\n",
+      "{'from': '\"Shahzad Khan\" <shahzad@almuqeettextiles.com>', 'to': ['\"\\'Waseem Shahzad\\'\" <Waseem.Shahzad@adamjeeinsurance.com>'], 'date': 'May 23, 2023, 3:10 PM', 'body': 'Dear All,\\n\\xa0\\nPlease find attached invoice with full detail please check and send us original policy soon.\\n\\xa0\\n\\xa0\\nBest Regards,\\nShahzad Khan \\n|\\n\\xa0\\nAL-MUQEET TEXTILES (PVT.) LTD.\\nT\\n \\n+92 21 3563 8362-5\\n \\n|\\xa0\\nF\\n \\n+92 21 3563 8366\\n \\n|\\n \\nC\\n \\n+92 323 3570114 \\nA\\n \\nM6, Mezzanine Floor, Beaumont Plaza, CL-10 ,Beaumont Road, Karachi - 75530 Pakistan.\\nE\\n \\nshahzad@almuqeettextiles.com\\n|\\n \\nW\\n \\nwww.almuqeettextiles.com'}\n",
+      "\n",
+      "{'from': '\"Shahzad Khan\" <shahzad@almuqeettextiles.com>', 'to': ['<waseem.shahzad@adamjeeinsurance.com>'], 'date': 'May 23, 2023, 6:19 PM', 'body': 'Dear All,\\n\\xa0\\nPlease correct invoice no. AMT-999-2023-05 instead of AMT-966-2023-05 otherwise policy is okay so please send soon.\\n\\xa0\\n'}\n",
+      "\n",
+      "{'from': 'Waseem Shahzad <Waseem.Shahzad@adamjeeinsurance.com>', 'to': ['Shahzad Khan <shahzad@almuqeettextiles.com>'], 'date': 'May 24, 2023, 6:13 AM', 'body': 'Dear Mr. Shahzad\\n\\xa0\\nPlease attached find soft copy of Marine Export Policy along with Premium Bill\\n\\xa0\\nWaseem Shahzad\\n\\xa0\\n'}\n",
+      "\n",
+      "{'from': '\"Shahzad Khan\" <shahzad@almuqeettextiles.com>', 'to': ['\"\\'Waseem Shahzad\\'\" <Waseem.Shahzad@adamjeeinsurance.com>'], 'date': 'June 04, 2023, 10:17 AM', 'body': 'Dear All,\\n\\xa0\\nPlease find attached invoice with full detail please check and send us original policy soon.\\n\\xa0\\n\\xa0\\nBest Regards,\\nShahzad Khan \\n|\\n\\xa0\\nAL-MUQEET TEXTILES (PVT.) LTD.\\nT\\n \\n+92 21 3563 8362-5\\n \\n|\\xa0\\nF\\n \\n+92 21 3563 8366\\n \\n|\\n \\nC\\n \\n+92 323 3570114 \\nA\\n \\nM6, Mezzanine Floor, Beaumont Plaza, CL-10 ,Beaumont Road, Karachi - 75530 Pakistan.\\nE\\n \\nshahzad@almuqeettextiles.com\\n|\\n \\nW\\n \\nwww.almuqeettextiles.com'}\n",
+      "{'from': '\"Shahzad Khan\" <shahzad@almuqeettextiles.com>', 'to': ['\"\\'Waseem Shahzad\\'\" <Waseem.Shahzad@adamjeeinsurance.com>'], 'date': 'June 04, 2023, 10:27 AM', 'body': 'REVISED INVOICE WITH CLAUSE \\n\\xa0\\n'}\n",
+      "\n",
+      "{'from': '\"Shahzad Khan\" <shahzad@almuqeettextiles.com>', 'to': ['\"\\'Mir Babar Ali\\'\" <Mir.babarali@adamjeeinsurance.com>'], 'date': 'June 04, 2023, 10:29 AM', 'body': 'Dear Mir Babar,\\n\\xa0\\nPlease make a cover and insurance as per attached file. Other detail we will share you after sailing of vessel.\\n\\xa0\\n\\xa0\\n\\xa0\\n\\xa0\\nBest Regards,\\nShahzad Khan \\n|\\n\\xa0\\nAL-MUQEET TEXTILES (PVT.) LTD.\\nT\\n \\n+92 21 3563 8362-5\\n \\n|\\xa0\\nF\\n \\n+92 21 3563 8366\\n \\n|\\n \\nC\\n \\n+92 323 3570114 \\nA\\n \\nM6, Mezzanine Floor, Beaumont Plaza, CL-10 ,Beaumont Road, Karachi - 75530 Pakistan.\\nE\\n \\nshahzad@almuqeettextiles.com\\n|\\n \\nW\\n \\nwww.almuqeettextiles.com'}\n",
+      "\n",
+      "{'from': 'Waseem Shahzad <Waseem.Shahzad@adamjeeinsurance.com>', 'to': ['Shahzad Khan <shahzad@almuqeettextiles.com>'], 'date': 'June 12, 2023, 10:57 AM', 'body': 'Dear Mr. Shahzad\\n\\xa0\\nPlease check & confirm attachment final draft of Marine Export Policy\\n\\xa0\\nWaseem Shahzad\\n\\xa0\\n'}\n",
+      "\n",
+      "{'from': '\"Shahzad Khan\" <shahzad@almuqeettextiles.com>', 'to': ['\"\\'Waseem Shahzad\\'\" <Waseem.Shahzad@adamjeeinsurance.com>'], 'date': 'June 12, 2023, 3:29 PM', 'body': 'Dear All,\\n\\xa0\\nPlease find attached invoice with full detail please check and send us original policy soon.\\n\\xa0\\n\\xa0\\nBest Regards,\\nShahzad Khan \\n|\\n\\xa0\\nAL-MUQEET TEXTILES (PVT.) LTD.\\nT\\n \\n+92 21 3563 8362-5\\n \\n|\\xa0\\nF\\n \\n+92 21 3563 8366\\n \\n|\\n \\nC\\n \\n+92 323 3570114 \\nA\\n \\nM6, Mezzanine Floor, Beaumont Plaza, CL-10 ,Beaumont Road, Karachi - 75530 Pakistan.\\nE\\n \\nshahzad@almuqeettextiles.com\\n|\\n \\nW\\n \\nwww.almuqeettextiles.com'}\n",
+      "\n",
+      "{'from': 'Waseem Shahzad <Waseem.Shahzad@adamjeeinsurance.com>', 'to': ['Shahzad Khan <shahzad@almuqeettextiles.com>'], 'date': 'June 13, 2023, 8:16 AM', 'body': 'Dear Mr. Shahzad\\n\\xa0\\nPlease attached find soft copy of Marine Export Policy along with Premium Bill\\n\\xa0\\nWaseem Shahzad \\n\\xa0\\n'}\n",
+      "\n",
+      "{'from': '\"Shahzad Khan\" <shahzad@almuqeettextiles.com>', 'to': ['<waseem.shahzad@adamjeeinsurance.com>'], 'date': 'June 13, 2023, 12:36 PM', 'body': 'We have confirm attached policy so please dispatch today.\\n\\xa0\\n'}\n",
+      "\n",
+      "{'from': '\"Shahzad Khan\" <shahzad@almuqeettextiles.com>', 'to': ['\"\\'Mir Babar Ali\\'\" <Mir.babarali@adamjeeinsurance.com>'], 'date': 'June 15, 2023, 5:15 PM', 'body': 'Dear Mir Babar,\\n\\xa0\\nPlease make a cover and insurance as per attached file. Other detail we will share you after sailing of vessel.\\n\\xa0\\n\\xa0\\n\\xa0\\n\\xa0\\nBest Regards,\\nShahzad Khan \\n|\\n\\xa0\\nAL-MUQEET TEXTILES (PVT.) LTD.\\nT\\n \\n+92 21 3563 8362-5\\n \\n|\\xa0\\nF\\n \\n+92 21 3563 8366\\n \\n|\\n \\nC\\n \\n+92 323 3570114 \\nA\\n \\nM6, Mezzanine Floor, Beaumont Plaza, CL-10 ,Beaumont Road, Karachi - 75530 Pakistan.\\nE\\n \\nshahzad@almuqeettextiles.com\\n|\\n \\nW\\n \\nwww.almuqeettextiles.com'}\n",
+      "\n",
+      "{'from': 'Waseem Shahzad <Waseem.Shahzad@adamjeeinsurance.com>', 'to': ['Shahzad Khan <shahzad@almuqeettextiles.com>'], 'date': 'June 16, 2023, 5:18 AM', 'body': 'Dear Mr. Shahzad\\n\\xa0\\nPlease check attachment Initial draft of Marine Export Policy\\n\\xa0\\nWaseem Shahzad\\n\\xa0\\n'}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a_convo_str, a_convo_data in convo_reader.conversations.items():\n",
+    "    if 'INVOICE FOR INSURANCE COVER' in a_convo_str:\n",
+    "        full_convo = a_convo_data.get_full_convo()\n",
+    "        for a_msg in full_convo:\n",
+    "            print(a_msg)\n",
+    "        print(\"\")\n"
    ]
   }
  ],
@@ -238,7 +383,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   },
   "orig_nbformat": 4
