--- a/apps/email_manager/scripts/v1.ipynb
+++ b/apps/email_manager/scripts/v1.ipynb
@@ -29,7 +29,7 @@
     "import re\n",
     "from apps.email_manager.models import EmailData, EmailAttachment\n",
     "from django.core.files.base import ContentFile\n",
-    "import pytz"
+    "import pytz\n"
    ]
   },
   {
@@ -3137,6 +3137,9 @@
    ],
    "source": [
     "\n",
+    "from os import environ\n",
+    "\n",
+    "\n",
     "def clean_text(text):\n",
     "    text = text.strip()\n",
     "    text = re.sub(r'\\n+', '\\n', text)\n",
@@ -3285,8 +3288,8 @@
     "    mail.logout()\n",
     "\n",
     "# Example usage\n",
-    "email_id = \"mirbilal199x@outlook.com\"\n",
-    "email_password = \"APPollo1947\"\n",
+    "email_id = os.environ[\"MINSIR_EMAIL_ID\"]\n",
+    "email_password = os.environ[\"MINSIR_EMAIL_PASSWORD\"]\n",
     "download_attachments_with_filename(email_id, email_password)\n",
     "\n"
    ]
