--- a/apps/email_manager/scripts/v2.ipynb
+++ b/apps/email_manager/scripts/v2.ipynb
@@ -227,38 +227,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/mirbilal/Desktop/minsir/media/email_attachments/AMT-994-2024-02_dBnocPv.pdf\n",
-      "/Users/mirbilal/Desktop/minsir/media/email_attachments/AMT-995-2024-02_BTEPAPf.pdf\n",
-      "/Users/mirbilal/Desktop/minsir/media/email_attachments/INSURANCE_POLICY_AMT-995-2024-02_So5tDAZ.pdf\n",
-      "/Users/mirbilal/Desktop/minsir/media/email_attachments/PR-0224-202504-M03-000152_btLlCci.pdf\n",
-      "/Users/mirbilal/Desktop/minsir/media/email_attachments/PR-0224-202504-M03-000153_1dspkR8.pdf\n",
-      "/Users/mirbilal/Desktop/minsir/media/email_attachments/AMT-994-2024-02_jA5t25U.pdf\n",
-      "/Users/mirbilal/Desktop/minsir/media/email_attachments/AMT-995-2024-02_DeHnYuQ.pdf\n",
-      "/Users/mirbilal/Desktop/minsir/media/email_attachments/INSURANCE_POLICY_AMT-995-2024-02_EvCFqfS.pdf\n",
+      "/Users/mirbilal/Desktop/minsir/media/email_attachments/ADAMJEE_INSURANCE_PAYMENT_SWIFT_16.02.2024-2_ZrruCMA.pdf\n",
+      "/Users/mirbilal/Desktop/minsir/media/email_attachments/PL-0123-202504-E12-000001_-_LAPTOPS_5PTg6tE.pdf\n",
       "{\n",
-      "    \"from\": \"waseem.shahzad@adamjeeinsurance.com\",\n",
+      "    \"from\": \"afzal.qadir@adamjeeinsurance.com\",\n",
       "    \"to\": [\n",
-      "        \"shahzad@almuqeettextiles.com\"\n",
+      "        \"mufzal.agha@adamjeeinsurance.com\"\n",
       "    ],\n",
-      "    \"date\": \"February 19, 2024, 7:55 AM\",\n",
-      "    \"subject\": \"FW: INVOICE FOR INSURANCE COVER\",\n",
-      "    \"body\": \"Dear Mr. Shahzad\\n\\u00a0\\nPlease check attachment Initial draft of Marine Export Policies and share B/L, Vessel & Sailing date as soon as possible\\n\\u00a0\\nWaseem Shahzad\\n\\u00a0\\n\"\n",
-      "}\n",
-      "{\n",
-      "    \"from\": \"shahzad@almuqeettextiles.com\",\n",
-      "    \"to\": [\n",
-      "        \"waseem.shahzad@adamjeeinsurance.com\"\n",
-      "    ],\n",
-      "    \"date\": \"February 19, 2024, 12:00 PM\",\n",
-      "    \"subject\": \"INVOICE FOR INSURANCE COVER\",\n",
-      "    \"body\": \"Dear Mir Babar,\\n\\u00a0\\nPlease make a cover and insurance Policy as per attached file. Other detail we will share you after sailing of vessel.\\n\\u00a0\\nBest Regards,\\nShahzad Khan \\n|\\n\\u00a0\\nAL-MUQEET TEXTILES (PVT.) LTD.\\nT\\n \\n+92 21 3563 8362-5\\n \\n|\\u00a0\\nF\\n \\n+92 21 3563 8366\\n \\n|\\n \\nC\\n \\n+92 323 3570114 \\nA\\n \\nM6, Mezzanine Floor, Beaumont Plaza, CL-10 ,Beaumont Road, Karachi - 75530 Pakistan.\\nE\\n \\nshahzad@almuqeettextiles.com\\n|\\n \\nW\\n \\nwww.almuqeettextiles.com\"\n",
+      "    \"date\": \"February 19, 2024, 6:33 AM\",\n",
+      "    \"subject\": \"ISSUE POLICY FOR EEI | M/S SIKA PAKISTAN (PVT.) LTD.\",\n",
+      "    \"body\": \"Dear Agha,\\n\\u00a0\\nPlease issue policy for EEI as per payment instrument attached.\\n\\u00a0\\n\\u00a0 Afzal Qadir\\nTeam Member,\\nMiscellaneous Underwriting\\nP\\u00a0\\n:\\n\\u00a0\\u00a0+92 21 32412623\\u00a0\\n\\u00a0Ext \\n1370 , \\nM\\u00a0\\n: +92 3350203993\\u00a0\\u00a0\\nE\\u00a0\\n:\\u00a0\\nafzal.qadir\\n@adamjeeinsurance.com\\nAdamjee Insurance Company Limited\\nAdamjee House Division, 5th Floor, \\nAdamjee House, I.I.Chundrigar Road, Karachi,\\n\\u00a0\\u00a0\\u00a0\\u00a0\\u00a0\\u00a0\\u00a0\\u00a0\\u00a0\\u00a0\\u00a0\\u00a0\\u00a0\\u00a0\\u00a0\\u00a0\\u00a0\\u00a0\\u00a0\\u00a0\\u00a0\\u00a0 Pakistan.\\u00a0\\u00a0\\u00a0\\u00a0 \\n\\u00a0\\u00a0\\u00a0\\u00a0\\u00a0\\n\\u00a0\\u00a0\\u00a0\\u00a0\\u00a0\\u00a0\\n\\u00a0\\u00a0\\u00a0\\u00a0\\u00a0\\n\\u00a0\\u00a0\\n\\u00a0\\u00a0\\nISO 9001:2015\\n\\u00a0\\nCERTIFIED\\u00a0\\u00a0\\n|\\u00a0\\u00a0\\nAA+\\n\\u00a0\\nPACRA\\n\\u00a0\\n\\u00a0\\n\"\n",
       "}\n",
       "\n",
       "------------------------------------\n",
@@ -268,7 +253,7 @@
    ],
    "source": [
     "for a_convo_str, a_convo_data in convo_reader.conversations.items():\n",
-    "    if 'INVOICE FOR INSURANCE COVER' in a_convo_str:\n",
+    "    if 'ISSUE POLICY FOR EEI | M/S SIKA PAKISTAN ' in a_convo_str:\n",
     "        (full_convo, attachments) = a_convo_data.get_full_convo()\n",
     "        attachments: list[EmailAttachment] = attachments\n",
     "        # insLLM = InsuranceERPLLM()\n",
