--- a/apps/email_manager/scripts/v1.ipynb
+++ b/apps/email_manager/scripts/v1.ipynb
@@ -73,7 +73,7 @@
     "def download_attachments_with_filename(email_id, email_password):\n",
     "    mail = imaplib.IMAP4_SSL(\"outlook.office365.com\", 993)\n",
     "    mail.login(email_id, email_password)\n",
-    "    mail.select(\"Inbox_1\")\n",
+    "    mail.select(\"Daily_Reader_1\")\n",
     "\n",
     "    since_date = datetime(2024, 2, 1)\n",
     "    since_date_formatted = since_date.strftime('%d-%b-%Y')\n",
